# DuoFusion

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
core/: __init__.py  camera_manager.py  duo_fusion.py  file_manager.py  recorder.py  timestamp_buffer.py
utils/: __init__.py  align.py  config.py  display.py  thermal_reader.py  timing.py
